public/css/styles.css
/* Ask Yos for questions */

html {
    background: url("/public/img/bg.png");
}

h1 {
    font-family: sans-serif;
    font-size:30px;
    float:left;
}

h1 a {
    color: #049FF7;
    text-decoration:none;
}

body {
    font-family: 'Helvetica Neue', Helvetica, Arial;
    clear: both;
    min-height: 100%;
    margin: 0px;
    height: auto !important;
}

.container {
    max-width: 940px;
    margin-left: auto;
    margin-right: auto;
}

/* Top navigation */
header {
    background: #fff;
    max-width: 100%;
    height:80px;
    border-bottom: 1px solid #d0d5cb;
}

header ul {
    margin-top:22px;
    width:400px;
    float:right;
    list-style-type: none;
}


header ul li a{
    font-family: 'Helvetica Neue', Helvetica, Arial;
    font-size:14px;
    float:right;
    margin: 0 10px;
    padding:10px;
    border-radius:5px;
    display: inline;
    text-decoration:none;
    text-transform:uppercase;
    color: #0088d6;
    border-bottom: 1px dashed transparent;
}

header ul li a:hover {
    color: #F4F4F4;
    background: #0088d6;
}

header ul li a.login, footer a.login {
    text-transform:none;
    line-height: 14px;
    color: #F4F4F4;
    background: #88B23C;
    margin: 0 15px;
}

header ul li a.login:hover, footer a.login:hover {
    background: #9BCA46;
}

/* Hero Image*/
#hero{
    width: 100%;
    height:120px;
    float: left;
    font-family: 'Merriweather', serif;
    font-weight:700;
    background: #45474D url('http://farm4.staticflickr.com/3758/9435515203_861cc96e1d_h.jpg') center center no-repeat;
    box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
}

#hero h2{
    font-size: 32px;
    font-weight:300;
    text-align: center;
    color: #fff;
    text-shadow: 0px 0px 12px rgba(0,0,0,0.8);
    text-align: left;
    margin-bottom: 0px;
}

#hero h3 {
    font-family: 'Helvetica Neue', Helvetica, Arial;
    color: #999;
    font-weight:300;
    margin-top: 0px;
}


/* Message */

.msgwrap {
    width: 100%;
    float: left;
}

h2.question {
    font-family: 'Merriweather', serif;
}

.messageBoard {
    margin: 40px;
}

.messageBoard p {
    width: 300px;
    background: #fff;
    margin: 10px;
    padding: 10px 15px;
    border-radius:5px;
    color: rgb(51, 51, 50);
    font-size: 15px;
    line-height: 21px;
}

.messageInput {

}

.like-button {
  margin: 0 auto 0 auto;
  width: 90px;
}

